chore: download時のエラーのcontent-typeを正しく修正
