# docs/apispec/openapi.json
@@ -141,16 +141,6 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "正常応答",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/FindBooksResponse"
-                }
-              }
-            }
-          },
           "400": {
             "description": "不正なリクエスト",
             "content": {
@@ -167,6 +157,16 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ProblemDetail"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "正常応答",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/FindBooksResponse"
                 }
               }
             }
@@ -189,9 +189,6 @@
           "required": true
         },
         "responses": {
-          "201": {
-            "description": "正常応答"
-          },
           "400": {
             "description": "不正なリクエスト",
             "content": {
@@ -211,6 +208,9 @@
                 }
               }
             }
+          },
+          "201": {
+            "description": "正常応答"
           }
         }
       }
@@ -233,8 +233,18 @@
           }
         ],
         "responses": {
-          "404": {
-            "description": "存在しないリソース",
+          "400": {
+            "description": "不正なリクエスト",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetail"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "サーバーエラー",
             "content": {
               "application/json": {
                 "schema": {
@@ -253,18 +263,8 @@
               }
             }
           },
-          "400": {
-            "description": "不正なリクエスト",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetail"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "サーバーエラー",
+          "404": {
+            "description": "存在しないリソース",
             "content": {
               "application/json": {
                 "schema": {
@@ -292,8 +292,8 @@
           }
         ],
         "responses": {
-          "404": {
-            "description": "存在しないリソース",
+          "400": {
+            "description": "不正なリクエスト",
             "content": {
               "application/json": {
                 "schema": {
@@ -305,8 +305,8 @@
           "204": {
             "description": "正常応答"
           },
-          "400": {
-            "description": "不正なリクエスト",
+          "500": {
+            "description": "サーバーエラー",
             "content": {
               "application/json": {
                 "schema": {
@@ -315,8 +315,8 @@
               }
             }
           },
-          "500": {
-            "description": "サーバーエラー",
+          "404": {
+            "description": "存在しないリソース",
             "content": {
               "application/json": {
                 "schema": {
@@ -354,19 +354,6 @@
           "required": true
         },
         "responses": {
-          "404": {
-            "description": "存在しないリソース",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetail"
-                }
-              }
-            }
-          },
-          "200": {
-            "description": "正常応答"
-          },
           "400": {
             "description": "不正なリクエスト",
             "content": {
@@ -379,6 +366,19 @@
           },
           "500": {
             "description": "サーバーエラー",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetail"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "正常応答"
+          },
+          "404": {
+            "description": "存在しないリソース",
             "content": {
               "application/json": {
                 "schema": {
@@ -520,6 +520,16 @@
           }
         ],
         "responses": {
+          "400": {
+            "description": "不正なリクエスト",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetail"
+                }
+              }
+            }
+          },
           "200": {
             "description": "正常応答",
             "content": {
@@ -531,20 +541,10 @@
               }
             }
           },
-          "400": {
-            "description": "不正なリクエスト",
-            "content": {
-              "text/csv": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetail"
-                }
-              }
-            }
-          },
           "500": {
             "description": "サーバーエラー",
             "content": {
-              "text/csv": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ProblemDetail"
                 }
